--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: Platane/snk@v3
         with:
-          github_user_name: YOUR-USERNAME # Replace with your GitHub username
+          github_user_name:shahinsadik # Replace with your GitHub username
           outputs: dist/github-contribution-grid-snake.svg
       - uses: actions/upload-artifact@v3
         with:
