--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,8 +1,8 @@
 name: Generate Snake
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs daily at midnight UTC
-  workflow_dispatch: # Allows manual triggering
+    - cron: "0 0 * * *" # Updates daily at midnight UTC
+  workflow_dispatch: # Allows manual runs
 jobs:
   generate:
     runs-on: ubuntu-latest
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: Platane/snk@v3
         with:
-          github_user_name:shahinsadik # Replace with your GitHub username
+          github_user_name: shahinsadik
           outputs: dist/github-contribution-grid-snake.svg
       - uses: actions/upload-artifact@v3
         with:
@@ -18,6 +18,6 @@ jobs:
           path: dist/github-contribution-grid-snake.svg
       - uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITH_TOKEN }}
           publish_dir: ./dist
           destination_dir: output
