--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,8 +1,8 @@
 name: Generate Snake
 on:
   schedule:
-    - cron: "0 0 * * *" # Updates daily at midnight UTC
-  workflow_dispatch: # Allows manual runs
+    - cron: "0 0 * * *"
+  workflow_dispatch:
 jobs:
   generate:
     runs-on: ubuntu-latest
@@ -11,13 +11,14 @@ jobs:
       - uses: Platane/snk@v3
         with:
           github_user_name: shahinsadik
-          outputs: dist/github-contribution-grid-snake.svg
+          outputs: github-contribution-grid-snake.svg
       - uses: actions/upload-artifact@v3
         with:
           name: snake.svg
-          path: dist/github-contribution-grid-snake.svg
+          path: github-contribution-grid-snake.svg
       - uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITH_TOKEN }}
-          publish_dir: ./dist
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: main
+          publish_dir: .
           destination_dir: output
