--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,24 +1,25 @@
-name: Generate Snake
+name: Generate Snake Animation
+
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *" # every day at midnight
   workflow_dispatch:
+
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: Platane/snk@v3
+      - name: Generate GitHub Contribution Snake
+        uses: Platane/snk@v3
         with:
           github_user_name: shahinsadik
-          outputs: github-contribution-grid-snake.svg
-      - uses: actions/upload-artifact@v3
+          outputs: |
+            ./output/github-contribution-grid-snake.svg
+
+      - name: Push Snake to the output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
-          name: snake.svg
-          path: github-contribution-grid-snake.svg
-      - uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_branch: main
-          publish_dir: .
-          destination_dir: output
+          target_branch: output
+          build_dir: output
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
